packages/theme-chalk/src/select.scss
@use 'mixins/mixins' as *;
@use 'mixins/var' as *;
@use 'common/var' as *;

$clearableRight: 34px;
$iconActiveMargin: -4px;

.#{$namespace}-select-enter-active,
.#{$namespace}-select-leave-active {
  transition: getCssVar(transition-ease);
}
.#{$namespace}-select-enter-from,
.#{$namespace}-select-leave-to {
  opacity: 0;
  &[data-popper-placement='top'] {
    transform: translate(0, 10px);
  }
  &[data-popper-placement='bottom'] {
    transform: translate(0, -10px);
  }
}

.v-clearable {
  &-enter-active {
    animation: v-clearable 0.25s ease forwards;
  }
  &-leave-active {
    animation: v-clearable 0.25s ease reverse;
  }
}

@keyframes v-clearable {
  0% {
    right: 10px;
    opacity: 0.2;
  }
  10% {
    opacity: 0.7;
  }
  100% {
    right: $clearableRight;
  }
}

@mixin state($color) {
  @include e(input) {
    background: getColor($color, 0.05);
    color: getColor($color, 1);
    &:hover {
      color: getColor('text', 1);
    }
  }

  @include e(chips) {
    background: getColor($color, 0.05);
    color: getColor($color, 1);
    &:hover {
      &:after {
        opacity: 0;
      }
    }
    &:after {
      width: calc(100% - 4px);
      height: calc(100% - 4px);
      content: '';
      position: absolute;
      top: 0px;
      left: 0px;
      border: 2px solid getColor($color, 0.5);
      border-radius: inherit;
      transition: getCssVar(transition-ease);
    }
  }
  @include e(label) {
    color: getColor($color, 1);
  }
  @include e(icon) {
    color: getColor($color, 1);
    background: getColor($color, 0.1);
    box-shadow: -15px 10px 10px -10px getColor($color, 0.1);
  }
  @include e(arrow) {
    color: getColor($color);
  }
  
  @include e(message) {
    @include m(#{$color}) {
      color: getColor($color, 1);
    }
  }
}

@include b(select) {
  @include set-component-var('select', $select);
}
/* ... */

